--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Created by https://www.gitignore.io/api/macos,python
 # Edit at https://www.gitignore.io/?templates=macos,python
 
+### PyCharm ###
+
+.idea
+
 ### macOS ###
 # General
 .DS_Store
