Correct MT-analysis.py
Corrected MT-plots.py to generate the correct output and renamed it MT-analysis.py
Removed extra .py files
Included QSD (except Gillespie data) and mean time results

--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,10 @@
 *.pdf
 *.png
 *.tex
+*.csv
+
+!Results/QSD/**/*.bin
+!Results/Mean time to extinction/Results.csv
 
 # Icon must end with two \r
 Icon
