Include mean time binary files
Included mean time results binaries

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@
 *.csv
 
 !Results/QSD/**/*.bin
+!Results/Mean time to extinction/**/*.bin
 !Results/Mean time to extinction/Results.csv
 
 # Icon must end with two \r
