Include full data
Included full results from Homeostatic_QSD_Gillespie.py

--- a/.gitignore
+++ b/.gitignore
@@ -17,10 +17,12 @@
 *.png
 *.tex
 *.csv
+Results/QSD/Established/Means.bin
 
 !Results/QSD/**/*.bin
 !Results/Mean time to extinction/**/*.bin
 !Results/Mean time to extinction/Results.csv
+!Samples/**/*.csv
 
 # Icon must end with two \r
 Icon
